Adicion de Teoria de Conjuntos y Relaciones

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,9 @@
 %Macrosección de Lógica de Predicados
 \subfile{sections/logica_predicado.tex}
 
+%Macroseccion de Teoría de Conjuntos y Relaciones
+\subfile{sections/conjunto.tex}
+
 %------Anexo---------------------
 \newpage
 
