Adicion de contenidos clase 9

--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,11 @@
 \usepackage[bookmarks]{hyperref}
 \usepackage{dsfont}
 \usepackage{subfiles}
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage[stable]{footmisc}
+
+\graphicspath{{img/}{../img/}}
 
 \title{Resumen general de Matemáticas Discretas}
 \author{Andrés Cabezas y Sebastián Poblete}
