Avances Contenido de Conjuntos

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,9 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage[stable]{footmisc}
+\usepackage{tikz}
+
+\usetikzlibrary{positioning}
 
 \graphicspath{{img/}{../img/}}
 
