--- a/sections/conjunto.tex
+++ b/sections/conjunto.tex
@@ -521,16 +521,25 @@ Considerando la descripción anterior, el diagrama de Hasse del orden $\leq$ sob
 Sea $(a,\preceq)$ un orden parcial y $S \subseteq A$ distinto de $\emptyset$.
 \begin{itemize}
     \item Si $S$ tiene un elemento mínimo, entonces ¿es único?\\
-    Si. Es único.\footnote{Se puede consultar la demostración en el anexo}
+    Si. Es único.\footnote{Se puede consultar la demostración en el anexo, \hyperref[sec:dem_min_unico]{subsección 2}}
     \item ¿Tiene $S$ siempre un mínimo?\\
     No. Es posible tener conjuntos que no tienen mínimos
     \item Si $x$ es mínimo, entonces ¿es $x$ minimal?\\
-    Si. Un mínimo es siempre minimal también.\footnote{Se puede consultar la demostración en el anexo}
+    Si. Un mínimo es siempre minimal también.\footnote{Se puede consultar la demostración en el anexo, \hyperref[sec:dem_min_minimal]{subsección 3}}
     \item Si $x$ es minimal, entonces ¿es $x$ es mínimo?\\
     No necesariamente.
     \item ¿Tiene $S$ siempre un elemento minimal?\\
     No necesariamente.
 \end{itemize}
 Con respecto a esto, también es verdadero respecto a maximales y máximos.
+
+\subsection{Ínfimos}
+Decimos que $c^*$ es infimo si es una cota inferior de $S$ y de todas las cotas inferiores de $S$, $c^*$ es la cota inferior mayor.
+
+\subsection{Supremos}
+Decimos que $c^*$ es supremo si es una cota superior de $S$ y de todas las cotas superiores de $S$, $c^*$ es la cota superior menor.
+
+\subsection{Clausuras}
+
 
 \end{document}
